--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -12,8 +12,8 @@
     </div>
     <div class="title clickable" (click)="this.editTask(task)">{{task.title}}</div>
     <div class="btn-group">
-        <div class="btn" (click)="this.editTask(task)">Edit Task</div>
-        <div class="btn" (click)="this.deleteTask(task)">Delete Task</div>
+        <div class="btn btn-task" (click)="this.editTask(task)">Edit Task</div>
+        <div class="btn btn-task" (click)="this.deleteTask(task)">Delete Task</div>
       </div>
   </div>
 </div>
