--- a/src/app/project-list/project-list.component.html
+++ b/src/app/project-list/project-list.component.html
@@ -1,9 +1,12 @@
 <div *ngFor="let project of projects">
 
   <div class="bar">
-      <div class="progress float-right">
+      <div class="progress">
         <div class="progress-bar" [ngStyle]="{'width': getProgress(project) + '%'}"></div>
       </div>
+        <div class="time" *ngIf="(project.timeLeft() > 0) && (project.timeLeft() <= 1)">1 hour left</div>
+        <div class="time" *ngIf="project.timeLeft() != 1">{{project.timeLeft()}} hours left</div>
+
       <div class="title left clickable" (click)="this.selectProject(project)">{{project.title}}</div>
       <div class="footer btn-group">
         <div class="btn" (click)="this.selectProject(project)">View Tasks</div>
@@ -12,4 +15,10 @@
       </div>
   </div>
 
+</div>
+
+<div *ngIf="projects.length == 0" class="bar">No projects to display</div>
+
+<div class="add bar clickable" (click)="this.editProject(null)">
+  <div class="addtext">+ Add Project</div>
 </div>
