--- a/src/app/task-list/task-list.component.css
+++ b/src/app/task-list/task-list.component.css
@@ -1,3 +1,12 @@
+.add {
+  margin-left: 88% !important;
+  width: 12% !important;
+}
+
+.addtext {
+  text-align: right;
+  font-style: italic;
+}
 
 .bar {
   width: 100%;
