--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -1,27 +1,24 @@
+<div *ngIf="getTasks().length == 0" class="row">No tasks to display</div>
 
-<div style="overflow-y: auto;">
-<div style="display: inline-block; width: 100%;" *ngFor="let task of getTasks()">
-
-  <div class="bar">
-    <div class="float-right">
-        <div class="progress">
-            <div class="progress-bar" [ngStyle]="{'width': getProgress(task.title) + '%'}"></div>
-        </div>
-        <div class="time" *ngIf="(task.timeLeft > 0) && (task.timeLeft <= 1)">1 hour left</div>
-        <div class="time" *ngIf="task.timeLeft != 1">{{task.timeLeft}} hours left</div>
-    </div>
-    <div class="title clickable" (click)="this.editTask(task)">{{task.title}}</div>
-    <div class="btn-group">
+<div *ngFor="let task of getTasks()">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="title clickable" (click)="this.editTask(task)">{{task.title}}</div>
+      <div class="btn-group">
         <div class="btn btn-task" (click)="this.editTask(task)">Edit Task</div>
         <div class="btn btn-task" (click)="this.deleteTask(task)">Delete Task</div>
       </div>
+    </div>
+    <div class="col-md-6">
+      <div class="progress">
+        <div class="progress-bar" [ngStyle]="{'width': getProgress(task.title) + '%'}"></div>
+      </div>
+      <div class="time" *ngIf="(task.timeLeft > 0) && (task.timeLeft <= 1)">1 hour left</div>
+      <div class="time" *ngIf="task.timeLeft != 1">{{task.timeLeft}} hours left</div>
+    </div>
   </div>
 </div>
 
-<div *ngIf="getTasks().length == 0" class="bar">No tasks to display</div>
-
 <div class="add bar clickable" (click)="this.editTask(null)">
-  <div class="addtext">+ Add Project</div>
-</div>
-
+  <div class="addtext">+ Add Task</div>
 </div>
