--- a/src/app/project-view/project-view.component.html
+++ b/src/app/project-view/project-view.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="col-md-9" *ngIf="!showTaskEditor()">
-    <app-task-list [tasks]="this.filteredTasks" [filter]="this.taskFilter"
+    <app-task-list [tasks]="this.project.tasks" [filter]="this.taskFilter"
       (editEvent)="receiveTaskToEdit($event)" (deleteEvent)="receiveTaskToDelete($event)"></app-task-list>
   </div>
 
