removed bar class

--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -30,6 +30,6 @@
   </div>
 </div>
 
-<div class="add bar clickable" (click)="this.editTask(null)">
+<div class="add clickable" (click)="this.editTask(null)">
   <div class="addtext">+ Add Task</div>
 </div>
