Logo not selectable

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -40,4 +40,8 @@
 
 #logo-container{
   cursor: pointer;
+  -webkit-user-select: none; /* Safari */        
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
